--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jasmine-core": "^3.10.1",
     "karma": "^6.3.8",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^4.0.1",
     "karma-typescript": "^5.5.2",
     "typescript": "^4.4.4"
